--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,4 +7,5 @@ updates:
   - package-ecosystem: "github-actions"
     directory: "/"
     schedule:
-      interval: "weekly" 
+      interval: "weekly"
+# Trigger Dependabot run at 2024-07-09T00:00:00Z 
